[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/ui-theme/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://game/ResourceView.gd" type="Script" id=2]

[node name="ResourceView" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -384.0
margin_top = 16.0
margin_right = 384.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerLabel" type="Label" parent="Panel/HBoxContainer"]
margin_top = 5.0
margin_right = 128.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Power: 0 (+0)"
align = 1
valign = 1

[node name="ClimateLabel" type="Label" parent="Panel/HBoxContainer"]
margin_left = 128.0
margin_top = 5.0
margin_right = 256.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Climate: 0 (+0)"
align = 1
valign = 1

[node name="FoodLabel" type="Label" parent="Panel/HBoxContainer"]
margin_left = 256.0
margin_top = 5.0
margin_right = 384.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Food: 0 (+0)"
align = 1
valign = 1

[node name="WaterLabel" type="Label" parent="Panel/HBoxContainer"]
margin_left = 384.0
margin_top = 5.0
margin_right = 512.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Water: 0 (+0)"
align = 1
valign = 1

[node name="MineralsLabel" type="Label" parent="Panel/HBoxContainer"]
margin_left = 512.0
margin_top = 5.0
margin_right = 640.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Minerals: 0 (+0)"
align = 1
valign = 1

[node name="MetalLabel" type="Label" parent="Panel/HBoxContainer"]
margin_left = 640.0
margin_top = 5.0
margin_right = 768.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Metal: 0 (+0)"
align = 1
valign = 1
